Updated Resourcegroup name
Lab B Exercise 1 Task 1 resouregroup name 'ResDevRG' should be ' 20533C0301-LabRG'

--- a/Instructions/20533C_LAB_03.md
+++ b/Instructions/20533C_LAB_03.md
@@ -194,7 +194,7 @@ The main tasks for this exercise are as follows:
 
   - virtualNetworkName: **HQ-VNET**
 
-  - resourceGroupName: **ResDevRG**
+  - resourceGroupName: **20533C0301-LabRG**
 
   - subnetName: **App**
 
