--- a/Instructions/20533C_LAB_03.md
+++ b/Instructions/20533C_LAB_03.md
@@ -65,7 +65,7 @@ The main tasks for this exercise are as follows:
 
   - Size: **A1 Standard**
 
-  - Use managed disks: **Yes**
+  - Use managed disks: **No**
 
   - Network name: **HQ-VNET**
 
