--- a/Instructions/20533C_LAB_AK_03.md
+++ b/Instructions/20533C_LAB_AK_03.md
@@ -33,7 +33,7 @@
 
 3. On the Choose a size blade, click **A1 Standard**, and then click **Select**.
 
-4. On the Settings blade, ensure that **Use managed disk** is set to **Yes** and that **HQ-VNET** is selected as the **Virtual network**.
+4. On the Settings blade, ensure that **Use managed disk** is set to **No** and that **HQ-VNET** is selected as the **Virtual network**.
 
 5. Click **Subnet**.
 
