Typo Get-AzureRMSubscription
Typo Get-AzureRMSubscription

--- a/Instructions/20533C_LAB_AK_05.md
+++ b/Instructions/20533C_LAB_AK_05.md
@@ -1,4 +1,4 @@
-﻿# Lab Answer Key: Module 5: Implementing Azure App Service
+# Lab Answer Key: Module 5: Implementing Azure App Service
 # Lab: Implementing web apps
   
 ## Exercise 1: Creating web apps
@@ -62,7 +62,7 @@
 10. If you have multiple subscriptions, to select the target one, type the following commands and press Enter after each:
 
   ```
-  Get-AzureRmSubsctiption
+  Get-AzureRmSubscription
   Set-AzureRmContext -SubscriptionId "Your subscription Id"
   ```
 
