--- a/Instructions/20533C_LAB_02.md
+++ b/Instructions/20533C_LAB_02.md
@@ -163,7 +163,7 @@ The main tasks for this exercise are as follows:
 1. From MIA-CL1, start Windows PowerShell ISE as Administrator
 
 2. From the Windows PowerShell ISE console, run D:\Labfiles\Lab02\Starter\New-AzureRm20533C02VM.ps1
-  ```
+
 3. When prompted to sign in (twice), type in the user name and the password which is either the Service Administrator or a Co-Administrator in your Azure subscription.
 
 4. If you have multiple subscription, when prompted, select the subscription to which you deployed the virtual network in the first exercise.
@@ -353,7 +353,12 @@ The main tasks for this exercise are as follows:
 
 2. From the local client, connect by using the newly configured VPN connection, and verify the resulting IP configuration by examining the output of **ipconfig /all**.
 
-3. Verify the VPN connection by initiating an RDP session to the private IP address of ARMSrv2 Azure virtual machine. Verify that you can successfully log on to ARMSrv2.
+3. Verify the VPN connection by initiating an RDP session to the private IP address of ARMSrv2 Azure virtual machine. Verify that you can successfully log on to ARMSrv2. Sign in by using the following credentials:
+
+  - User name: **Student**
+
+  - Password: **Pa55w.rd1234**
+  
 > **Note:** Note that you could potentially also test connectivity to a file share on ARMSrv2 Azure virtual machine or ping it by its IP address, however, that would require modifying Windows Firewall settings on ARMSrv2 in order to allow File and Printer Sharing traffic.
 
 4. Close the RDP session and disconnect the VPN connection.
