Simplified the certificate import into the gateway. Deleting line breaks is not necessary, but costs time and is error-prone. Removed that step.

--- a/Instructions/20533C_LAB_02.md
+++ b/Instructions/20533C_LAB_02.md
@@ -325,25 +325,23 @@ The main tasks for this exercise are as follows:
 
 7. Open **D:\Labfiles\Lab02\Starter\AdatumRootCertificate.cer** in Notepad.
 
-8. Remove all line breaks between individual lines between the **-----BEGIN CERTIFICATE------** and **------END CERTIFICATE------** lines, so the certificate content is one continuous line.
+8. Copy the the text between the **-----BEGIN CERTIFICATE------** and **------END CERTIFICATE------** lines
 
-9. Copy the single line between the **-----BEGIN CERTIFICATE------** and **------END CERTIFICATE------** lines
+9. Paste the copied text into the **PUBLIC CERTIFICATE DATA** textbox on the **gatewayARM - Point-to-site configuration** blade of the Azure portal. 
 
-10. Paste the copied text into the **PUBLIC CERTIFICATE DATA** textbox on the **gatewayARM - Point-to-site configuration** blade of the Azure portal. 
+10. In the **NAME** text box to the left, type **AdatumRootCertificate** and save the change.
 
-11. In the **NAME** text box to the left, type **AdatumRootCertificate** and save the change.
+11. Switch back to the Command Prompt window.
 
-12. Switch back to the Command Prompt window.
-
-13. At the Command Prompt, run the following command:
+12. At the Command Prompt, run the following command:
 
   ```
   makecert.exe -n "CN=AdatumClientCertificate" -pe -sky exchange -m 96 -ss My -in "AdatumRootCertificate" -is my -a sha1
   ```
 
-14. Switch back to the Certificates console, verify that both the **AdatumClientCertificate** and ** AdatumRootCertificate** display in the Personal store.
+13. Switch back to the Certificates console, verify that both the **AdatumClientCertificate** and ** AdatumRootCertificate** display in the Personal store.
 
-15. Close the Certificates console.
+14. Close the Certificates console.
 
 
 
