--- a/Instructions/20533C_LAB_AK_02.md
+++ b/Instructions/20533C_LAB_AK_02.md
@@ -274,29 +274,27 @@
 
 19. At the Commmand Prompt, type **notepad D:\Labfiles\Lab02\Starter\AdatumRootCertificate.cer** and press **Enter**.
 
-20. Remove all line breaks between individual lines between the **-----BEGIN CERTIFICATE------** and **------END CERTIFICATE------** lines, so the certificate content is one continuous line.
+20. Select the text between the **-----BEGIN CERTIFICATE------** and **------END CERTIFICATE------** lines and press **Ctrl+C**
 
-21. Select the single line between the **-----BEGIN CERTIFICATE------** and **------END CERTIFICATE------** lines and press **Ctrl+C**
+21. Switch back to Internet Explorer.
 
-22. Switch back to Internet Explorer.
+22. Paste the copied text into the **PUBLIC CERTIFICATE DATA** textbox on the **gatewayARM - Point-to-site configuration** blade of the Azure portal. 
 
-23. Paste the copied text into the **PUBLIC CERTIFICATE DATA** textbox on the **gatewayARM - Point-to-site configuration** blade of the Azure portal. 
+23. In the **NAME** text box to the left, type **AdatumRootCertificate** and click **Save**.
 
-24. In the **NAME** text box to the left, type **AdatumRootCertificate** and click **Save**.
+24. Switch back to the Command Prompt window.
 
-25. Switch back to the Command Prompt window.
-
-26. At the command prompt, type the following command, and then press Enter:
+25. At the command prompt, type the following command, and then press Enter:
 
   ```
   makecert.exe -n "CN=AdatumClientCertificate" -pe -sky exchange -m 96 -ss My -in "AdatumRootCertificate" -is my -a sha1
   ```
 
-27. Switch back to the Certificates console and refresh the view of **Certificates** folder under the **Personal** folder. 
+26. Switch back to the Certificates console and refresh the view of **Certificates** folder under the **Personal** folder. 
 
-28. Verify that both the **AdatumClientCertificate** and ** AdatumRootCertificate** display in the Personal store.
+27. Verify that both the **AdatumClientCertificate** and ** AdatumRootCertificate** display in the Personal store.
 
-29. Close the Certificates console.
+28. Close the Certificates console.
 
 
 
