Removed dependency on makecert using PowerShell commands instead to simplify the lab.

--- a/Instructions/20533C_LAB_02.md
+++ b/Instructions/20533C_LAB_02.md
@@ -311,37 +311,40 @@ The main tasks for this exercise are as follows:
 
 2. Modify the Point-to-site configuration of the gatewayARM by adding the address pool of **172.16.0.0/24**.
 
-3. On MIA-CL1, open a Command Prompt window with elevated privileges, and change the current directory to **C:\Program Files (x86)\Windows Kits\10\bin\x64**.
+3. Switch to the Windows PowerShell window.
 
-4. From the Command Prompt, run:
-
+4. From the Windows PowerShell prompt, create a root certificate by running:
+ 
   ```
-  makecert -sky exchange -r -n "CN=AdatumRootCertificate" -pe -a sha1 -len 2048 -ss My "AdatumRootCertificate.cer"
-  ```
-
-5. Open the Certificates console targeting the certificate store of the current user.
-
-6. Export the newly created certificate without its private key and in the **Base-64 encoded X.509 (.CER)** format to the **D:\Labfiles\Lab02\Starter\AdatumRootCertificate.cer** file.
-
-7. Open **D:\Labfiles\Lab02\Starter\AdatumRootCertificate.cer** in Notepad.
-
-8. Copy the the text between the **-----BEGIN CERTIFICATE------** and **------END CERTIFICATE------** lines
-
-9. Paste the copied text into the **PUBLIC CERTIFICATE DATA** textbox on the **gatewayARM - Point-to-site configuration** blade of the Azure portal. 
-
-10. In the **NAME** text box to the left, type **AdatumRootCertificate** and save the change.
-
-11. Switch back to the Command Prompt window.
-
-12. At the Command Prompt, run the following command:
-
-  ```
-  makecert.exe -n "CN=AdatumClientCertificate" -pe -sky exchange -m 96 -ss My -in "AdatumRootCertificate" -is my -a sha1
+  $rootCert=New-SelfSignedCertificate -KeySpec KeyExchange -Subject 'CN=AdatumRootCertificate' -KeyExportPolicy Exportable -CertStoreLocation Cert:\CurrentUser\My\ -FriendlyName 'AdatumRootCertificate'
   ```
 
-13. Switch back to the Certificates console, verify that both the **AdatumClientCertificate** and ** AdatumRootCertificate** display in the Personal store.
+5. From the Windows PowerShell prompt, retrieve the public key of the root certificate by running:
+  ```
+  [System.Convert]::ToBase64String($rootCert.GetPublicKey())
+  ```
 
-14. Close the Certificates console.
+6. Copy the the output of the previous command to the clipboard.
+
+7. Paste the copied text into the **PUBLIC CERTIFICATE DATA** textbox on the **gatewayARM - Point-to-site configuration** blade of the Azure portal. 
+
+8. In the **NAME** text box to the left, type **AdatumRootCertificate** and save the change.
+
+9. Switch back to the Windows PowerShell window.
+
+10. At the Windows PowerShell prompt, run the following command:
+
+  ```
+  New-SelfSignedCertificate -Subject 'CN=AdatumClientCertificate' -KeyExportPolicy Exportable -KeySpec KeyExchange -NotAfter (Get-Date).AddMonths(96) -CertStoreLocation Cert:\CurrentUser\My\ -FriendlyName 'AdatumClientCertificate' -Signer $rootCert
+  ```
+
+11. At the Windows PowerShell prompt, run the following command:
+
+  ```
+  Get-ChildItem Cert:\CurrentUser\My\
+  ```
+
+12. Verify that both the **AdatumClientCertificate** and **AdatumRootCertificate** display in the Personal store.
 
 
 
