Lab 03: Clarification added, which image to choose for VM. Clarification added, which file to open in Visual Studio. Fixed numbering.

--- a/Instructions/20533C_LAB_03.md
+++ b/Instructions/20533C_LAB_03.md
@@ -1,4 +1,4 @@
-﻿# Module 3: Implementing virtual machines
+# Module 3: Implementing virtual machines
 # Lab A: Creating Azure virtual machines
   
 ### Scenario
@@ -46,7 +46,7 @@ The main tasks for this exercise are as follows:
 
 2. Sign in using the Microsoft account that is either the Service Administrator or Co-administrator of your subscription.
 
-3. From the Azure portal, create an Azure Resource Manager virtual machine with the following parameters:
+3. From the Azure portal, create an Azure Resource Manager virtual machine based on the Windows Server 2016 Datacenter operating system image with the following parameters:
 
 
   - Name: **ResDevDB1**
@@ -177,13 +177,15 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Use Visual Studio to deploy the Linux app server's virtual machines
   
-1. On MIA-CL1, on the taskbar, click the **Visual Studio** icon. If prompted with the message that the evaluation period has ended, click the **Sign in** and provide your Microsoft account credentials. Then, on the **Host your next project in Visual Studio Team Services** page, click the **Not now, maybe later** link. Next, click **Close**. 
+1. On MIA-CL1, on the taskbar, click the **Visual Studio** icon. If prompted with the message that the evaluation period has ended, click the **Sign in** and provide your Microsoft account credentials. Then, on the **Host your next project in Visual Studio Team Services** page, click the **Not now, maybe later** link. Next, click **Close**.
 
-2. View the contents of the **azuredeploy.json** template.
+2. In Visual Studio, open the solution **ResDevLinuxDeploy.sln** from **D:\Labfiles\Lab03\Starter\ResDev\ResDevLinuxDeploy**. 
 
-3. From the Solution Explorer, start a new deployment process for the first virtual machine.
+3. View the contents of the **azuredeploy.json** template.
 
-4. Deploy a new virtual machine into the **20533C0301-LabRG** resource group, by using the following parameter values:
+4. From the Solution Explorer, start a new deployment process for the first virtual machine.
+
+5. Deploy a new virtual machine into the **20533C0301-LabRG** resource group, by using the following parameter values:
 
 
   - vmName: **ResDevApp1**
@@ -206,18 +208,18 @@ The main tasks for this exercise are as follows:
 
 > **Note:** Deployment will run with the output that appears in the Output pane, which is at the bottom of the window. When deployment is complete, you will receive a message stating that the template was deployed successfully to the resource group 20533C0301-LabRG.
 
-1. View the contents of the Azuredeploy.parameters.json file to see that the parameters that you entered have been saved in this file.
+6. View the contents of the Azuredeploy.parameters.json file to see that the parameters that you entered have been saved in this file.
 
-2. Start another deployment process by using the deployment that you used for the first virtual machine. 
+7. Start another deployment process by using the deployment that you used for the first virtual machine. 
 
-3. Repeat step 4, changing only the following parameter:
+8. Repeat step 4, changing only the following parameter:
 
 
   - vmName: **ResDevApp2
 
 > **Note:** Deployment will run with the output that appears in the Output pane, which is at the bottom of the window. When deployment is complete, you will receive a message stating the template was deployed successfully to the resource group 20533C0301-LabRG.
 
-1. Close the solution but leave Visual Studio open.
+9. Close the solution but leave Visual Studio open.
 
 
 
@@ -298,7 +300,7 @@ The main tasks for this exercise are as follows:
   - subnetName: **Web**
 
 
-1. When the script completes, repeat step 5, changing only the value of the vmName parameter to **ResDevWeb2**
+6. When the script completes, repeat step 5, changing only the value of the vmName parameter to **ResDevWeb2**
 
 
 
